--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<h1>Esta va a ser la página principal de mi portafolio en GitHub.</h1>
+<html>
+  <h1>Esta va a ser la página principal de mi portafolio en GitHub.</h1>
+</html>
